--- a/Test/index.html
+++ b/Test/index.html
@@ -36,28 +36,28 @@
           getSize2();
         }
 
-      //‰æ–ÊƒTƒCƒY‚ðŽæ“¾‚·‚é
+      //ç”»é¢ã‚µã‚¤ã‚ºã‚’å–å¾—ã™ã‚‹
       function getSize1() {
-        var size = "‰¡• = " + screen.width
-          + "A@‚‚³ = " + screen.height;
+        var size = "æ¨ªå¹… = " + screen.width
+          + "ã€ã€€é«˜ã• = " + screen.height;
         document.getElementById("dat1").innerHTML = size;
       }
 
-      //ƒEƒBƒ“ƒhƒEƒTƒCƒY‚ðŽæ“¾‚·‚é
+      //ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚µã‚¤ã‚ºã‚’å–å¾—ã™ã‚‹
       function getSize2() {
         var wid, hei, size;
         wid = window.innerWidth;
         hei = window.innerHeight;
-        size = "‰¡• = " + wid + "A@‚‚³ = " + hei;
+        size = "æ¨ªå¹… = " + wid + "ã€ã€€é«˜ã• = " + hei;
         document.getElementById("dat2").innerHTML = size;
       }
     //-->
     </script>
     
     <div style="background-color : #CCC;">
-      <input type="button" value="•\Ž¦" onClick="disp()">
-      ‰æ–ÊƒTƒCƒY@@@@F@<span id="dat1"></span>
-      ƒEƒBƒ“ƒhƒEƒTƒCƒY@F@<span id="dat2"></span>
+      <input type="button" value="è¡¨ç¤º" onClick="disp()">
+      ç”»é¢ã‚µã‚¤ã‚ºã€€ã€€ã€€ã€€ï¼šã€€<span id="dat1"></span>
+      ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚µã‚¤ã‚ºã€€ï¼šã€€<span id="dat2"></span>
     </div>
   </body>
 </html>
