--- a/Test/index.html
+++ b/Test/index.html
@@ -24,7 +24,7 @@
         div.innerHTML = tempData;
       }
       else {
-        var tempData = '<center><div id="unityContainer" style="width: ' + window.innerWidth + '; height: ' + window.innerHeight + '; margin: auto"></div></center>';
+        var tempData = '<center><div id="unityContainer" style="width: ' + window.innerWidth + 'px; height: ' + window.innerHeight + 'px; margin: auto"></div></center>';
         div.innerHTML = tempData;
       }
     </script>
