--- a/Test/index.html
+++ b/Test/index.html
@@ -20,7 +20,7 @@
       if (navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/i)) {
         var mobileHeight = $(window).height();
         var mobileWidth = $(window).width();
-        var tempData = '<center><div id="unityContainer" style="width: ' + mobileWidth + 'px; height: ' + mobileHeight + 'px; margin: auto"></div></center>'
+        var tempData = '<center><div id="unityContainer" style="width: ' + mobileWidth + 'px; height: ' + mobileHeight + 'px; margin: auto"></div></center>';
         div.innerHTML = tempData;
       }
       else {
